--- a/package.json
+++ b/package.json
@@ -12,5 +12,15 @@
     "express": "^4.14.1",
     "express-handlebars": "^3.0.0",
     "express3-handlebars": "^0.5.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "grunt": "^1.0.1",
+    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-exec": "^1.0.1",
+    "gulp": "^3.9.1",
+    "mocha": "^3.2.0",
+    "zombie": "^5.0.5"
   }
 }
